--- a/CreateSummary.ipynb
+++ b/CreateSummary.ipynb
@@ -122,7 +122,7 @@
    "id": "5b1c2024",
    "metadata": {},
    "source": [
-    "### Get a summary of the data set using dask\n"
+    "### Get a summary of the data set using S3 and dask\n"
    ]
   },
   {
@@ -1203,12 +1203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "850ec390",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the date it was created and last updated\n",
+    "# get the date the parquet dataset was created and last updated\n",
     "\n",
     "fs = s3fs.S3FileSystem()\n",
     "    \n",
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "351ea419",
    "metadata": {},
    "outputs": [
@@ -1325,8 +1325,7 @@
     "    fs = s3fs.S3FileSystem()\n",
     "    partitions = fs.ls(s3_uri)\n",
     "    partition_names = [p.split(\"=\")[-1] for p in partitions]\n",
-    "    # print(\"\\n\".join(p.split(\"=\")[-1] for p in partitions))count\n",
-    "    \n",
+    "    # get partition and non-partition columns\n",
     "    partition_column_names = list(\n",
     "        ddf.select_dtypes(include=\"category\").columns\n",
     "    )\n",
@@ -1337,7 +1336,7 @@
     "\n",
     "    return partition_names, partition_column_names, column_names  \n",
     "\n",
-    "# Or just run it directly to see output:\n",
+    "\n",
     "partition_names, partition_column_names, column_names = summarise_ds(s3_uri)\n",
     "    "
    ]
@@ -1347,7 +1346,7 @@
    "id": "9bd3b0a4",
    "metadata": {},
    "source": [
-    "Use DuckDB to get information"
+    "### Use DuckDB to get information"
    ]
   },
   {
@@ -1382,20 +1381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ad5d04d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SQL query\n",
+    "# Define SQL query for DuckDB\n",
     "\n",
-    "partition_names_sql = \", \".join(f\"'{d}'\" for d in partition_names[1::]) # skip the first partition which is metadata\n",
+    "partition_names_sql = \", \".join(f\"'{d}'\" for d in partition_names[1::]) # skip the first partition which is the metadata file\n",
     "\n",
+    "# grab the first partition column name (e.g. deployment_code for slocum underwater gliders)\n",
     "partition_column_name = partition_column_names[0]\n",
     "\n",
+    "# If the dataset has TIME, LONGITUDE and LATITUDE columns, assume it's an IMOS dataset and get more detailed summary statistics.\n",
+    "# Otherwise, just get row counts by partition.\n",
     "if 'TIME' in column_names and 'LONGITUDE' in column_names and 'LATITUDE' in column_names:\n",
     "\n",
-    "    # This is an IMOS dataset\n",
+    "    # This is an IMOS dataset (e.g. slocum_glider_delayed_qc)\n",
     "    # Variable names are standardised\n",
     "\n",
     "    sql = f\"\"\"\n",
@@ -1421,6 +1423,7 @@
     "    \n",
     "    # This is not an IMOS dataset, so just get row counts by partition\n",
     "    # Variable names will likely vary by dataset\n",
+    "    # (e.g. argo)\n",
     "    \n",
     "    sql = f\"\"\"\n",
     "    SELECT\n",
@@ -1439,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "c8d10783",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2% ▕▊                                     ▏ (~14.9 minutes remaining) "
+      "100% ▕██████████████████████████████████████▏ (00:21:00.94 elapsed)     \n"
      ]
     }
    ],
@@ -1456,76 +1459,275 @@
     "\n",
     "# Testing \n",
     "# hive partitioning, LIMIT 1, group/order by deployment code, count rows, min/max time = 6m45s\n",
-    "# Specifying a list of partition names decreased time to ~5m\n",
-    "# it would estimate a longer period of time to execute, and then suddenly finish (e.g. 35 min at first, took 18 mins)\n",
-    "\n"
+    "# Specifying a list of partition names decreased time to ~5m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "92d3ecc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>n_rows</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>915148800</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>946684800</td>\n",
+       "      <td>12684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>978307200</td>\n",
+       "      <td>18114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1009843200</td>\n",
+       "      <td>17323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1041379200</td>\n",
+       "      <td>41162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1072915200</td>\n",
+       "      <td>36393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1104537600</td>\n",
+       "      <td>124696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1136073600</td>\n",
+       "      <td>228780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1167609600</td>\n",
+       "      <td>316358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1199145600</td>\n",
+       "      <td>1206354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1230768000</td>\n",
+       "      <td>1185533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1262304000</td>\n",
+       "      <td>2433754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1293840000</td>\n",
+       "      <td>4696763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1325376000</td>\n",
+       "      <td>7111033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1356998400</td>\n",
+       "      <td>7340194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1388534400</td>\n",
+       "      <td>10452622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1420070400</td>\n",
+       "      <td>8875442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1451606400</td>\n",
+       "      <td>10829637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1483228800</td>\n",
+       "      <td>11201687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1514764800</td>\n",
+       "      <td>11028552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1546300800</td>\n",
+       "      <td>10975171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1577836800</td>\n",
+       "      <td>11726383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1609459200</td>\n",
+       "      <td>11432811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1640995200</td>\n",
+       "      <td>11911424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1672531200</td>\n",
+       "      <td>11158984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1704067200</td>\n",
+       "      <td>5168996</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     timestamp    n_rows\n",
+       "0    915148800      1500\n",
+       "1    946684800     12684\n",
+       "2    978307200     18114\n",
+       "3   1009843200     17323\n",
+       "4   1041379200     41162\n",
+       "5   1072915200     36393\n",
+       "6   1104537600    124696\n",
+       "7   1136073600    228780\n",
+       "8   1167609600    316358\n",
+       "9   1199145600   1206354\n",
+       "10  1230768000   1185533\n",
+       "11  1262304000   2433754\n",
+       "12  1293840000   4696763\n",
+       "13  1325376000   7111033\n",
+       "14  1356998400   7340194\n",
+       "15  1388534400  10452622\n",
+       "16  1420070400   8875442\n",
+       "17  1451606400  10829637\n",
+       "18  1483228800  11201687\n",
+       "19  1514764800  11028552\n",
+       "20  1546300800  10975171\n",
+       "21  1577836800  11726383\n",
+       "22  1609459200  11432811\n",
+       "23  1640995200  11911424\n",
+       "24  1672531200  11158984\n",
+       "25  1704067200   5168996"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Format start_time and end_time as strings for better display in HTML\n",
-    "stats[\"start_time\"] = stats[\"start_time\"].dt.strftime(\"%Y-%m-%d %H:%M\")\n",
-    "stats[\"end_time\"]   = stats[\"end_time\"].dt.strftime(\"%Y-%m-%d %H:%M\")\n",
+    "\n",
+    "if 'start_time' in stats.columns and 'end_time' in stats.columns:\n",
+    "    # Format start_time and end_time as strings for better display in HTML table\n",
+    "    stats[\"start_time\"] = stats[\"start_time\"].dt.strftime(\"%Y-%m-%d %H:%M\")\n",
+    "    stats[\"end_time\"]   = stats[\"end_time\"].dt.strftime(\"%Y-%m-%d %H:%M\")\n",
     "\n",
     "stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "5f330087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139532350\n"
+     ]
+    }
+   ],
    "source": [
+    "# Get total number of rows across all partitions\n",
     "total_rows = stats[\"n_rows\"].sum()\n",
     "print(total_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "b4f891ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create plot\n",
+    "# Create a figure to plot the approximate locations of the partitions based on their min latitude and longitude.\n",
+    "\n",
     "fig = plt.figure(figsize=(8, 8))\n",
     "ax = plt.axes(projection=ccrs.PlateCarree())\n",
-    "\n",
     "# Set Australia extent\n",
     "ax.set_extent([110, 155, -45, -10], crs=ccrs.PlateCarree())\n",
-    "\n",
     "# Add coastline\n",
     "ax.coastlines(resolution='10m')\n",
     "ax.add_feature(cfeature.BORDERS, linewidth=0.5)\n",
-    "\n",
-    "# Scatter\n",
-    "ax.scatter(\n",
-    "    stats['min_longitude'],\n",
-    "    stats['min_latitude'],\n",
-    "    s=stats['n_rows'] / 300,\n",
-    "    edgecolors='k',\n",
-    "    transform=ccrs.PlateCarree()\n",
-    ")\n",
-    "\n",
+    "if 'min_latitude' in stats.columns and 'min_longitude' in stats.columns:\n",
+    "    # Scatter\n",
+    "    ax.scatter(\n",
+    "        stats['min_longitude'],\n",
+    "        stats['min_latitude'],\n",
+    "        s=stats['n_rows'] / 300,\n",
+    "        edgecolors='k',\n",
+    "        transform=ccrs.PlateCarree()\n",
+    "    )\n",
+    "# Set title\n",
     "ax.set_title(\"Partition approx locations (Australia)\")\n",
     "\n",
-    "\n",
-    "\n",
-    "# Save to memory buffer\n",
+    "# Save figure to memory buffer (to include in the html summary)\n",
     "buf = io.BytesIO()\n",
     "plt.savefig(buf, format=\"png\", bbox_inches=\"tight\")\n",
     "plt.close(fig)\n",
-    "\n",
     "buf.seek(0)\n",
-    "\n",
     "# Convert to base64\n",
-    "img_base64 = base64.b64encode(buf.read()).decode(\"utf-8\")"
+    "img_base64 = base64.b64encode(buf.read()).decode(\"utf-8\")\n"
    ]
   },
   {
@@ -1533,12 +1735,12 @@
    "id": "174fcc2f",
    "metadata": {},
    "source": [
-    "Export information to a html "
+    "### Export information to a html "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "e6f875f8",
    "metadata": {},
    "outputs": [],
@@ -1668,15 +1870,27 @@
    "execution_count": null,
    "id": "9ac067c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output saved to: argo_summary.html\n"
+     ]
+    }
+   ],
    "source": [
+    "def add_title(title_str):\n",
+    "    print(\"=\" * 150)\n",
+    "    print(title_str.center(150))\n",
+    "    print(\"=\" * 150)\n",
+    "    print(' ' * 150)\n",
+    "\n",
+    "\n",
     "def html_summary_content():\n",
     "    \n",
     "    # S3 summaryTotal notebook runtimep is much faste\n",
-    "    print(\"=\" * 150)\n",
-    "    print(\"PARQUET FILE SUMMARY\")\n",
-    "    print(\"=\" * 150)\n",
-    "    print(' ' * 150)\n",
+    "    add_title(\"PARQUET FILE SUMMARY\")\n",
     "    _,_,files = get_s3_size_and_file_count(s3_uri)\n",
     "    print(' ' * 150)\n",
     "    print(f\"Parquet file created: {first}\")\n",
@@ -1684,34 +1898,25 @@
     "    print(' ' * 150)\n",
     "\n",
     "    # List the files in the dataset\n",
-    "    print(\"=\" * 150)\n",
-    "    print(\"DATASET VARIABLES AND PARTITIONS\")\n",
-    "    print(\"=\" * 150)\n",
-    "    print(' ' * 150)\n",
+    "    add_title(\"DATASET VARIABLES AND PARTITIONS\")\n",
     "    summarise_ds(s3_uri)\n",
     "    print(' ' * 150)\n",
     "    \n",
     "    # Deployment stats\n",
-    "    print(\"=\" * 150)\n",
-    "    print(\"DATASET STATISTICS\")\n",
-    "    print(\"=\" * 150)\n",
+    "    add_title(\"DATASET STATISTICS\")\n",
     "    print(f\"\\nTotal rows: {total_rows}\")\n",
     "    print(' ' * 150)\n",
     "    print(stats.to_string())\n",
     "    print(' ' * 150)\n",
     "    \n",
     "    # List the files in the dataset\n",
-    "    print(\"=\" * 150)\n",
-    "    print(\"PARQUET FILES IN DATASET\")\n",
-    "    print(\"=\" * 150)\n",
+    "    add_title(\"PARQUET FILES IN DATASET\")\n",
     "    print(' ' * 150)\n",
     "    for file in files:\n",
     "        print(file)\n",
     "    print(\"=\" * 150)\n",
     "    print(' ' * 150)\n",
-    "    print(\"=\" * 150)\n",
-    "    print(\"NETCDF FILES APPENDED\")\n",
-    "    print(\"=\" * 150)\n",
+    "    add_title(\"NETCDF FILES APPENDED\")\n",
     "    print(' ' * 150)\n",
     "    for file in nc_files:\n",
     "        print(file)\n",
@@ -1727,7 +1932,6 @@
     "    print(f\"Total notebook runtime: {minutes}m {seconds:.1f}s\")\n",
     "    print(' ' * 150)\n",
     "    \n",
-    "\n",
     "\n",
     "# Capture all output to a single HTML file\n",
     "capture_prints_to_html(html_summary_content, dataset_name, f'{dataset_name}_summary.html')\n"
@@ -1747,12 +1951,13 @@
    "metadata": {},
    "source": [
     "- The use of the DuckDB progress bar was a quick way to see if my query was reasonable (if it would take too long)\n",
+    "\n",
     "- There are two progress bars when loading into memory (first one for the DuckDB query, and second one for memory (much longer))\n",
     "- it would estimate a longer period of time to execute, and then suddenly finish (e.g. 35 min at first, took 18 mins)\n",
     "- Earlier testing suggests using duckdb with 14 cores makes querying twice as fast\n",
     "- Setting hive partitioning to True and enabling partition pruning is much faster for getting statistics - perhaps because DuckDB is told where to look rather than discovering partitions/loading metadata?\n",
     "- Multiple ways to get partition information\n",
-    "- Even though `slocum_glider_delayed_qc.parquet` is much larger (~34.2GB) compared to `argo.parquet` (~3GB), the notebook took a similar amount of time, suggesting that we need to optimise some files.."
+    "- Even though `slocum_glider_delayed_qc.parquet` is much larger (~34.2GB) compared to `argo.parquet` (~3GB), the notebook required more time to complete, suggesting that we need to optimise this file"
    ]
   },
   {
